<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDFD"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/user_avatar"
        android:foregroundTint="#FAF6F6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:gravity="center_vertical"
        android:text="@string/user_name"
        android:textColor="@color/fui_bgGitHub"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toTopOf="@+id/user_avatar" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/is_the_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fui_idp_button_background_yahoo" />

    <TextView
        android:id="@+id/header_text"
        android:layout_width="197dp"
        android:layout_height="53dp"
        android:layout_marginTop="21dp"
        android:gravity="center_vertical"
        android:text="@string/My_Profile"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/menu_button" />

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_transparent_drawable"
        android:contentDescription="@string/takes_back_to_previous_screen"
        app:layout_constraintBottom_toTopOf="@+id/user_avatar"
        app:layout_constraintEnd_toStartOf="@+id/header_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        tools:ignore="VisualLintBounds" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="5"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:stepSize="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center_vertical"
        android:text="@string/rating"
        android:textColor="@color/fui_bgGitHub"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/preference2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/preferences"
        android:padding="5dp"
        android:text="@string/preference_2"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/preference1" />

    <TextView
        android:id="@+id/preference1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/preferences"
        android:padding="5dp"
        android:text="@string/preference_1"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/preference3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/preferences"
        android:padding="5dp"
        android:text="@string/preference_3"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/preference2" />

    <TextView
        android:id="@+id/Credentials"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:text="@string/credentials"
        android:textColor="@color/fui_bgGitHub"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <ImageView
        android:id="@+id/barchart"
        android:layout_width="376dp"
        android:layout_height="213dp"
        android:contentDescription="@string/is_the_barchart"
        android:scaleX="0.75"
        android:scaleY="0.95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Credentials"
        app:layout_constraintVertical_bias="0.284"
        app:srcCompat="@drawable/bar_chart" />

    <TextView
        android:id="@+id/y_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/y_axis"
        android:textColor="@color/fui_bgGitHub"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barchart" />


</androidx.constraintlayout.widget.ConstraintLayout>