<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDFD"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/is_the_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fui_idp_button_background_yahoo" />

    <TextView
        android:id="@+id/header_text"
        android:layout_width="197dp"
        android:layout_height="53dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        >

        <TextView
            android:id="@+id/menu_chat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/chat"
            android:textColor="@color/fui_bgGitHub"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/menu_history"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/history"
            android:textColor="@color/fui_bgGitHub"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/menu_myprofile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/My_Profile"
            android:textColor="@color/fui_bgGitHub"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/menu_meet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/meet"
            android:textColor="@color/fui_bgGitHub"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>